--- a/integradora/resourses/orden.html
+++ b/integradora/resourses/orden.html
@@ -194,27 +194,20 @@ function fetchOrdenes() {
             document.getElementById("ordenes-body").innerHTML = ordenesHTML;
         }
 function formatDate(fechaISO) {
-    if (!fechaISO) {
-        return 'Fecha no disponible'; // Maneja casos donde la fecha no exista
-    }
-
-    const date = new Date(fechaISO);
-    if (isNaN(date.getTime())) {
-        return 'Fecha inválida'; // Maneja casos donde la fecha no sea válida
-    }
-
-    // Formato deseado: "YYYY-MM-DD HH:mm:ss"
-    const options = {
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit",
-        hour: "2-digit",
-        minute: "2-digit",
-        second: "2-digit",
-        hour12: false,
-    };
-    return new Intl.DateTimeFormat("es-ES", options).format(date).replace(",", "");
-}
+            const date = new Date(fechaISO);
+            console.log(date);
+            // Formato deseado: "YYYY-MM-DD HH:mm:ss"
+            const options = {
+                year: "numeric",
+                month: "2-digit",
+                day: "2-digit",
+                hour: "2-digit",
+                minute: "2-digit",
+                second: "2-digit",
+                hour12: false,
+            };
+            return new Intl.DateTimeFormat("es-ES", options).format(date).replace(",", "");
+        }
 
 
         function renderOrdenesPaginationControls() {
