--- a/integradora/resourses/orden.html
+++ b/integradora/resourses/orden.html
@@ -194,20 +194,24 @@ function fetchOrdenes() {
             document.getElementById("ordenes-body").innerHTML = ordenesHTML;
         }
 function formatDate(fechaISO) {
-            const date = new Date(fechaISO);
-            console.log(date);
-            // Formato deseado: "YYYY-MM-DD HH:mm:ss"
-            const options = {
-                year: "numeric",
-                month: "2-digit",
-                day: "2-digit",
-                hour: "2-digit",
-                minute: "2-digit",
-                second: "2-digit",
-                hour12: false,
-            };
-            return new Intl.DateTimeFormat("es-ES", options).format(date).replace(",", "");
-        }
+    if (!fechaISO) return "Fecha no válida";
+
+    try {
+        // Separar la fecha y la hora de la cadena ISO
+        const [fecha, hora] = fechaISO.split("T");
+        if (!fecha || !hora) throw new Error("Formato ISO incorrecto.");
+
+        // Extraer las partes de la fecha
+        const [year, month, day] = fecha.split("-");
+        const [hours, minutes, seconds] = hora.replace("Z", "").split(":");
+
+        // Formatear en el estilo deseado: "YYYY-MM-DD HH:mm:ss"
+        return `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`;
+    } catch (error) {
+        console.error("Error al formatear la fecha:", error.message);
+        return "Fecha no válida";
+    }
+}
 
 
         function renderOrdenesPaginationControls() {
